# simple-svg

./: CMakeLists.txt
demo/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/include/simple-svg-writer/: simple_svg.h
